@@ -20,6 +20,13 @@
 
 		<!-- Use -DskipShaded=false to build a executable jar. -->
 		<skipShaded>true</skipShaded>
+
+			
+		<!-- Required by Aeron 1.47+, see https://github.com/aeron-io/aeron/wiki/Change-Log#1470-2025-01-17 -->
+		<test.jvm.aeron>
+			--add-opens java.base/jdk.internal.misc=ALL-UNNAMED
+			--add-opens java.base/java.util.zip=ALL-UNNAMED
+		</test.jvm.aeron>
 	</properties>
 
 	<dependencies>
@@ -119,6 +126,15 @@
 						</goals>
 					</execution>
 				</executions>
+			</plugin>
+
+			
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<configuration>
+					<argLine>${test.jvm.aeron} ${argLine}</argLine>
+				</configuration>
 			</plugin>
 
 		</plugins>
